SERVER-49720 [SBE] Query comparison operators traverse one level too deep